Fix for broken styles; put full path to theme.scss with site.url base

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "theme";
+@import "{{site.url}}/assets/css/theme.scss";
 
 
 nav.main-nav ul {
